# matcha

./: .gitignore  README.md  THIRD_PARTY_LICENSES.md  demo_gradio.py  environment.yml  pyproject.toml
data/: data.md  prepare_cat_embedding.py  prepare_pf_pascal.sh
matcha/benchmark/: __init__.py  base_benchmark.py  run_benchmarks.py  visualization.py
matcha/benchmark/geometry/: aachen.py  geometric_matching_benchmark.py  hpatches.py  megadepth.py  scannet.py
matcha/benchmark/semantic/: pfpascal.py  pfwillow.py  semantic_matching_benchmark.py  spair.py
matcha/benchmark/temporal/: tapvid.py
matcha/dataset/geometry/: aachen.py  megadepth.py  megadepth_eval.py  scannet.py  scannet_eval.py
matcha/dataset/semantic/: ap10k.py  pfpascal.py  pfwillow.py  semantic.py  spair.py  utils.py
matcha/feature/: __init__.py  base_feature.py  custom_feature.py  dedode.py  dift.py  dinov2.py  matcha_feature.py  matcha_light_feature.py
matcha/matcher/: base_matcher.py
matcha/model/: matcha.py
matcha/train/: dataset.py  train.py  trainer.py  utils.py
matcha/train/losses/: geometric_loss.py  geometric_loss_utils.py  semantic_loss.py  semantic_loss_utils.py
matcha/utils/: category_list.py  computation_analyse.py  device.py  geometry.py  image.py  image_processor.py  metrics.py  semantic_matching.py
scripts/: geometric_demo.py  semantic_demo.py
